--- a/.github/workflows/quarto-render.yaml
+++ b/.github/workflows/quarto-render.yaml
@@ -14,18 +14,16 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v4
-
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: .
           file: Dockerfile
           push: false
-
       - name: Commit HTML output
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: 
+        run: |
           # Set up Git
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
