--- a/.github/workflows/quarto-render.yaml
+++ b/.github/workflows/quarto-render.yaml
@@ -24,11 +24,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Set up Git
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
-
-          # Check if the output file exists and commit if it does
-          git add *.html
+          git add .
           git commit -m "Update rendered HTML output" || echo "No changes to commit"
           git push origin main
