--- a/.github/workflows/quarto-render.yaml
+++ b/.github/workflows/quarto-render.yaml
@@ -21,8 +21,7 @@ jobs:
           file: Dockerfile
           push: false
       - name: Commit HTML output
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: actions/checkout@v4
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
