try new commit action

--- a/.github/workflows/quarto-render.yaml
+++ b/.github/workflows/quarto-render.yaml
@@ -20,10 +20,6 @@ jobs:
           context: .
           file: Dockerfile
           push: false
-      - uses: actions/checkout@v4
-      - run: |
-          git config --global user.name "GitHub Action"
-          git config --global user.email "action@github.com"
-          git add .
-          git commit -m "Update rendered HTML output" || echo "No changes to commit"
-          git push origin main
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: render report
