--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,18 @@
 data filter=lfs diff=lfs merge=lfs -text
+data/postgis_census.rds filter=lfs diff=lfs merge=lfs -text
+data/Tribal_Priority_2_5_combined.shp filter=lfs diff=lfs merge=lfs -text
+data/geocode_comparison_clean.rds filter=lfs diff=lfs merge=lfs -text
+data/nominatim_gc.rds filter=lfs diff=lfs merge=lfs -text
+data/postgis_gc.rds filter=lfs diff=lfs merge=lfs -text
+data/Tribal_Priority_2_5_combined.prj filter=lfs diff=lfs merge=lfs -text
+data/compare_w_ranks.rds filter=lfs diff=lfs merge=lfs -text
+data/degauss_census.rds filter=lfs diff=lfs merge=lfs -text
+data/nominatim_census.rds filter=lfs diff=lfs merge=lfs -text
+data/reference_census.rds filter=lfs diff=lfs merge=lfs -text
+data/reference_locs.rds filter=lfs diff=lfs merge=lfs -text
+data/Tribal_Priority_2_5_combined.cpg filter=lfs diff=lfs merge=lfs -text
+data/degauss_gc.rds filter=lfs diff=lfs merge=lfs -text
+data/loc_class.rds filter=lfs diff=lfs merge=lfs -text
+data/ruca.xlsx filter=lfs diff=lfs merge=lfs -text
+data/Tribal_Priority_2_5_combined.dbf filter=lfs diff=lfs merge=lfs -text
+data/Tribal_Priority_2_5_combined.shx filter=lfs diff=lfs merge=lfs -text
