--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-data/ 
 geocoder_evaluation_files/
 
 # History files
@@ -25,8 +24,8 @@ geocoder_evaluation_files/
 .Rproj.user/
 
 # rendered files
-*.html
-*.pdf
+#*.html
+#*.pdf
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
