--- a/.github/workflows/quarto-render.yaml
+++ b/.github/workflows/quarto-render.yaml
@@ -16,10 +16,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
-      - name: Build docker images
-        run: docker build -t local .
-      - name: Run image
-        run: docker run local "quarto geocoder_evaluation.qmd"
+      - name: Setup Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v2
+          with:
+            r-version: '4.4.1'
+      - name: Setup Renv
+        uses: r-lib/actions/setup-renv@v2
+      - name: Render Report
+        run: quarto geocoder_evaluation.qmd
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: render report
