--- a/.github/workflows/quarto-render.yaml
+++ b/.github/workflows/quarto-render.yaml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
+      - name: install curl
+        run:  apt-get install libcurl4-openssl-dev
       - name: Setup Quarto
         uses: quarto-dev/quarto-actions/setup@v2
       - name: Setup R
